# payroll_example

./: .gitignore  LISCENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/payroll_example/: __init__.py  employees.py
tests/: test_hourly.py  test_salary.py
