[tool.poetry]
name = "payroll-example"
version = "0.1.0"
description = ""
authors = ["Sam Hill <s.hill@yorksj.ac.uk>"]
readme = "README.md"
packages = [{include = "payroll_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
