[tool.poetry]
name = "payroll-example"
version = "0.2.0"
description = "Allows our company ACME Inc. to calculate the amount of money each employee is owed each month"
authors = ["Sam Hill <s.hill@yorksj.ac.uk>"]
readme = "README.md"
packages = [{include = "payroll_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
